[project]
name = "aba-installer"
version = "0.1.0"
description = "Bootstrap helper for installing and controlling ABA on macOS."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "PyYAML>=6.0",
  # Tier-0-tray (misc/mac-install.md § 3c). darwin-only — pulls PyObjC,
  # which is macOS-only. CI Linux skips the wheel and the tray modules'
  # tests still run because they don't import rumps at module level.
  "rumps>=0.4; sys_platform == 'darwin'",
]

[project.scripts]
aba-installer = "aba_installer.service:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# *.yml ships the install/update playbooks — without them a non-editable
# install (the real tarball install) has no playbooks and /api/install 500s.
aba_installer = ["ui/**/*", "*.yml", "templates/**/*"]
